<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/option_delete_all"
        android:title="@string/title_delete_all"
        app:showAsAction="never"/>
    <item android:id="@+id/option_refresh"
        android:title="@string/title_refresh"
        android:icon="@drawable/sync_24"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/option_icon_download"
        android:title="@string/title_download"
        android:icon="@drawable/baseline_download_24"
        app:showAsAction="always"/>
    <item android:id="@+id/option_icon_search"
        android:title="@string/title_search"
        android:icon="@drawable/search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>
    <item android:id="@+id/option_icon_filter"
        android:title="@string/title_filter"
        android:icon="@drawable/baseline_filter_list_24"
        app:showAsAction="always"/>
    <item android:id="@+id/option_icon_sort"
        android:title="@string/title_sort"
        android:icon="@drawable/swap_vert_24"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/option_sort_date_asc"
                android:title="@string/title_sort_date_asc" />
            <item android:id="@+id/option_sort_date_desc"
                android:title="@string/title_sort_date_desc" />
        </menu>
    </item>
</menu>